--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,161 @@
+:root{
+    --very-dark-blue: hsl(233, 47%, 7%);
+    --dark-desatureted-blue: hsl(244, 38%, 16%);
+    --soft-violet: hsla(277, 64%, 61%, 0.5);
+    --slightly-white: hsla(0, 0%, 100%, 0.6);
+    --slightly-white-heading: hsla(0, 0%, 100%, 0.6);
+    --font-inter: 'Inter', sans-serif;
+    --font-lexend: 'Lexend Deca', sans-serif;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+}
+
+body{
+    background-color: var(--very-dark-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    margin-top: auto;
+    width: 80vw;
+    /* height: 60vh; */
+    max-width: 600px;
+    min-width: 600px;
+    display: flex;
+    /* flex-direction: column-reverse; */
+}
+
+.heading{
+    font-size: 1.3rem;
+    color: white;
+    margin-bottom: 1.5rem;
+}
+
+#section1{
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    color: var(--slightly-white);
+    padding: 2rem;
+    /* width: 100%; */
+    height: 100%;
+    background-color: var(--dark-desatureted-blue);
+}
+
+#section1 >p{
+    font-family: var(--font-lexend);
+    font-size: 0.6rem;
+    line-height: 1rem;
+    letter-spacing: 0.02em;
+}
+span{
+    color: hsl(277, 64%, 61%);
+}
+
+#img-container{
+    /* width: 100%; */
+    height: 100%;
+    background-size: cover;
+    background-image: url('images/image-header-desktop.jpg');
+    /* border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    background-size: cover;
+    width: 50%;
+    background-image: url('images/image-header-desktop.jpg'); */
+}
+
+#inner-img{
+    width: 100%;
+    background-color:var(--soft-violet);
+    height: 100%;
+}
+
+#qty-container{
+    font-family: var(--font-lexend);
+    margin-top: 2rem;
+    margin-bottom: 0.7rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#qty-container > *{
+    color: white;
+    margin-right: 2rem;
+    text-transform: uppercase;
+}
+#qty-container > div > p{
+    color: var(--slightly-white);
+    font-family: var(--font-lexend);
+    letter-spacing: 0.1em;
+    margin-top: 0.6rem;
+    font-size: 0.5rem;
+}
 
 
-- Very dark blue (main background): hsl(233, 47%, 7%)
+.attribution { 
+    color: var(--slightly-white-heading);
+    margin-top: auto;
+    font-size: 11px; text-align: center; 
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+@media screen and (min-width: 566px) and (max-width: 690px){
+    main{
+        width: 90vw;
+    }
+    
+}
+
+@media screen and (max-width: 565px){
+    main{
+        margin: 2rem auto;
+        border: 1px solid red;
+        width: 50%;
+        height: 90%;
+        flex-direction: column-reverse;
+        text-align: center;
+        padding: 2rem;
+    }
+
+    #img-container{
+        width: 100%;
+        height: 100%;
+        background: url('images/image-header-mobile.jpg');
+        background-size: cover;
+    }
+
+    #qty-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       
+    }
+    #qty-container > *{
+        width: 50%;
+        text-align: center;
+        margin-top: 1rem;
+    }
+    
+}
+
+
+
+
+
+
+
+/* - Very dark blue (main background): hsl(233, 47%, 7%)
 - Dark desaturated blue (card background): hsl(244, 38%, 16%)
 - Soft violet (accent): hsl(277, 64%, 61%)
 
@@ -8,4 +163,4 @@
 
 - White (main heading, stats): hsl(0, 0%, 100%)
 - Slightly transparent white (main paragraph): hsla(0, 0%, 100%, 0.75)
-- Slightly transparent white (stat headings): hsla(0, 0%, 100%, 0.6)
+- Slightly transparent white (stat headings): hsla(0, 0%, 100%, 0.6) */
