--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ main{
     border-bottom-left-radius: 8px;
     color: var(--slightly-white);
     padding: 2rem;
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     background-color: var(--dark-desatureted-blue);
 }
@@ -62,7 +62,7 @@ span{
 }
 
 #img-container{
-    /* width: 100%; */
+    width: 50%;
     height: 100%;
     background-size: cover;
     background-image: url('images/image-header-desktop.jpg');
