--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,79 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+
+body {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--very-dark-blue);
+    color: var(--slightly-white);
+  }
+ 
+  main{
+      margin: 4rem 0;
+      width: 85vw;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      /* overflow: hidden; */
+  }
+  #img-container{
+      background-color: antiquewhite;
+      background-image: url('images/image-header-mobile.jpg');
+      height: 200px;
+      background-repeat: no-repeat;
+      width: 100%;
+      background-size: cover;
+  }
+  #inner-img{
+      height: 100%;
+      background-color: var(--soft-violet);
+  }
+  #section2{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 1rem 2.90rem;
+      background-color:var(--dark-desatureted-blue)
+  }
+  .heading{
+      color: white;
+  }
+  span{
+      color:hsl(277, 64%, 61%);
+  }
+  #section2 > *{
+      margin-top: 1.2rem;
+  }
+  #section2  p{
+    color: var(--slightly-white);
+    font-size: 0.8rem;
+    line-height: 1rem;
+  }
+  #qty-container > div{
+      font-size: 1.4rem;
+      letter-spacing: 0.05rem;
+      margin-bottom: 1rem;
+  }
+  #qty-container h5{
+    color: white;
+  }
+  #qty-container p{
+    text-transform: uppercase;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
+    letter-spacing: 0.05rem;
+  }
+  footer{
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      font-size: 0.6rem;
+      text-align: center;
+  }
