--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     --dark-desatureted-blue: hsl(244, 38%, 16%);
     --soft-violet: hsla(277, 64%, 61%, 0.5);
     --slightly-white: hsla(0, 0%, 100%, 0.6);
-    --slightly-white-heading: hsla(0, 0%, 100%, 0.6);
+    --slightly-white-heading: hsla(0, 0%, 100%, 0.8);
     --font-inter: 'Inter', sans-serif;
     --font-lexend: 'Lexend Deca', sans-serif;
 }
@@ -15,79 +15,83 @@
     font-family: 'Inter', sans-serif;
 }
 
-body {
-    position: relative;
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark-desatureted-blue);
+    color: var(--slightly-white-heading);
+}
+
+main{
+    border-radius: 10px;
+    margin-top: auto;
+    width: 85vw;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+    min-width: 400px;
+    max-height: 300px;
+    overflow: hidden;
+}
+main > *{
+    width: 50%;
+    height: 100%;
+}
+
+.inner-img{
+    width: 100%;
+    height: 100%;
+    filter: opacity(0.7) drop-shadow(0 0 0 hsl(277, 98%, 49%));
+}
+
+#section2{
+    background-color: var(--very-dark-blue);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--very-dark-blue);
-    color: var(--slightly-white);
-  }
- 
-  main{
-      margin: 4rem 0;
-      width: 85vw;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      /* overflow: hidden; */
-  }
-  #img-container{
-      background-color: antiquewhite;
-      background-image: url('images/image-header-mobile.jpg');
-      height: 200px;
-      background-repeat: no-repeat;
-      width: 100%;
-      background-size: cover;
-  }
-  #inner-img{
-      height: 100%;
-      background-color: var(--soft-violet);
-  }
-  #section2{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 1rem 2.90rem;
-      background-color:var(--dark-desatureted-blue)
-  }
-  .heading{
-      color: white;
-  }
-  span{
-      color:hsl(277, 64%, 61%);
-  }
-  #section2 > *{
-      margin-top: 1.2rem;
-  }
-  #section2  p{
-    color: var(--slightly-white);
-    padding: 0 1rem;
-    font-size: 0.8rem;
-    line-height: 1rem;
-  }
-  #qty-container > div{
-      font-size: 1.4rem;
-      letter-spacing: 0.05rem;
-      margin-bottom: 1rem;
-  }
-  #qty-container h5{
-    color: white;
-  }
-  #qty-container p{
-    text-transform: uppercase;
+    padding: 2rem;
+}
+span{
+    color: var(--soft-violet)
+}
+
+#section2 > *{
+    margin-bottom: 1rem;
+}
+
+#section2 p{
     font-size: 0.6rem;
+    line-height: 1rem;
+    color: var(--slightly-white);
+    font-family: var(--font-lexend);
+}
+
+#qty-container{
+    margin-top: 1.2rem;
+    width: 100%;
+    display: flex;
+}
+
+#qty-container>*{
+    margin-right: 1.2rem;
+}
+
+#qty-container p{
     margin-top: 0.5rem;
     letter-spacing: 0.05rem;
-  }
-  footer{
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      font-size: 0.6rem;
-      text-align: center;
-  }
+    font-size: 0.6rem;
+    text-transform: uppercase;
+}
+
+footer{
+    font-size: 0.7rem;
+    margin-top: auto;
+    margin-bottom: 0.2rem;
+}
